--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
+    "@iconify-json/material-symbols": "^1.1.89",
     "@nuxt/devtools": "latest",
     "@nuxt/ui": "^2.17.0",
+    "@pinia/nuxt": "^0.5.4",
     "nuxt": "^3.12.4"
   },
   "dependencies": {
